2008-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* starttls.el (starttls-any-program-available): Rewritten so it doesn't
	require itself and to remove `with-no-warnings'.

2008-11-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* starttls.el (starttls-any-program-available): Get the name of the
	available TLS layer program.
	(starttls-open-steam-gnutls, starttls-open-stream): Put port number as
	well as the host name in the "opening" message.

	* auth-source.el (auth-source-cache, auth-source-do-cache)
	(auth-source-user-or-password): Cache passwords and logins by default,
	allow override with `auth-source-do-cache'.
	(auth-source-forget-user-or-password): Allow users to remove cache
	entries if needed.

2008-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* ietf-drums.el (ietf-drums-remove-comments): Localize second
	condition-case to only the forward-sexp call.

2008-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* ietf-drums.el (ietf-drums-remove-comments): Fix bug with single
	quotes contained.  Make it more robust regardless by an extra
	condition-case wrapper.

2008-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnml.el (nnml-request-expire-articles): Check if the function set to
	`nnmail-expiry-target' returns the symbol `delete'.

	* nnfolder.el (nnfolder-request-expire-articles): Ditto.

	* nnmail.el (nnmail-expiry-target): Fix custom type.

2008-10-02  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (mm-codepage-setup): Tweak codepage error.
	Silence compiler warning.

2008-09-30  Chong Yidong  <cyd@stupidchicken.com>

	* mml.el (mml-menu): Don't assume mml2015 is bound.

2008-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Check if summary window
	exists.

2008-09-27  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (mail-header-remove-comments): Autoload it.

2008-09-27  Andreas Schwab  <schwab@suse.de>

	* gnus-util.el (gnus-split-references): Strip comments.
	(gnus-parent-id): Likewise.
